<resources>
    <string name="navigation_drawer_open">Open folders drawer</string>
    <string name="navigation_drawer_close">Close folders drawer</string>

    <string name="action_add_notes">+</string>
    <string name="action_find_notes">Search</string>
    <string name="action_find_notes_title">Search</string>
    <string name="input_password_for_backup_db_title">Input password for backup</string>
    <string name="action_settings">Settings</string>
    <string name="menu_note_editor_save">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_without_password">Without password</string>
    <string name="exit_without_save_confirm">Exit without save?</string>
    <string name="menu_move">Move...</string>
    <string name="move_title">Moving</string>
    <string name="menu_delete">Delete...</string>
    <string name="menu_rename">Rename...</string>
    <string name="rename_folder_title">Rename</string>
    <string name="menu_set_done">Set done...</string>
    <string name="delete_confirm">Delete note?</string>
    <string name="set_done">Done</string>
    <string name="set_no_needed">No needed</string>
    <string name="set_in_work">In work</string>
    <string name="cancel">Cancel</string>
    <string name="finding_label">Search results: %s</string>
    <string name="finding_label_count">Count: %s</string>
    <string name="action_ok">Ok</string>
    <string name="action_thanks">Thanks</string>
    <string name="delete_button">Delete</string>
    <string name="action_restore">Restore</string>
    <string name="add_category">Add folder...</string>
    <string name="folder_name_need_no_empty">Folder name need no empty</string>
    <string name="category_all">All</string>
    <string name="category_unknown">Not selected</string>
    <string name="menu_cd">Menu</string>
    <string name="delete_folder_confirm">Delete folder \"%s\"?</string>
    <string name="delete_folder_confirm_message">Delete all notes in folder</string>
    <string name="error_with_id">Error. Contact to developer. Error id: %s</string>
    <string name="error_title">Error</string>
    <string name="error_s">Error: %s</string>
    <string name="error_lnotesync_not_found">Application LNotesSync not found</string>
    <string name="restore_db_confirm">Restore notes from backup?", "Attention! After restore current data will be lost!</string>
    <string name="copy_data_message">Copy...</string>
    <string name="action_backup">Backup...</string>
    <string name="action_backup_restore">Backup and restore</string>
    <string name="clearing_outdated">Clearing outdated ones...</string>
    <string name="clearing_outdated_title">Clearing outdated records</string>
    <string name="backup_title">Backup</string>
    <string name="copy_base_from_old_lnotes">LNotes database update</string>
    <string name="action_about">About</string>
    <string name="about_message">\nLight notes in my pocket\n\nFree MIT License\nSource code:\nhttps://github.com/wn1/LNotes\n\n(C) Vladimir Kudashov, 2015-2026</string>
    <string name="action_backup_confirm_title">Copy all notes?</string>
    <string name="copy">Copy</string>
    <string name="need_update_lnotesync">Update LNotesSync needed</string>
    <string name="input_password">Input password</string>
    <string name="backup_saved">Backup saved</string>
    <string name="backup_db_close_wait">Try again later, the data is being prepared</string>
    <string name="backup_saved_to">Backup saved to: </string>
    <string name="backup_send_title">Send db backup to</string>
    <string name="backup_sent">Backup sent</string>
    <string name="backup_restored">Backup restored</string>
    <string name="password_error">Error. Password may be incorrect.</string>
    <string name="save_backup_db">Save database</string>
    <string name="restore_backup_db">Restore database</string>
    <string name="file_selector_not_found">File Manager for select files not found</string>
    <string name="file_create_error">Error creating file:</string>
    <string name="db_backup_error">Backup error: %s</string>
    <string name="action_contact_developer">E-Mail to developer</string>
    <string name="action_remove_ads">Buy plus version</string>
    <string name="action_buy_plus_version">Buy Light notes plus</string>
    <string name="app_not_found">The application for this action was not found</string>
    <string name="like_app_quest_title">Like the app?</string>
    <string name="like_app_quest_text">Please, rate us on Google&#160;Play. This will help us to improve the app</string>
    <string name="open_google_play">Open Google Play</string>
    <string name="later">Later</string>
    <string name="no_but_thanks">No rating, but thanks</string>
    <string name="rating_star_1">Rating star 1</string>
    <string name="rating_star_2">Rating star 2</string>
    <string name="rating_star_3">Rating star 3</string>
    <string name="rating_star_4">Rating star 4</string>
    <string name="rating_star_5">Rating star 5</string>
    <string name="email_to_developer_subject">Support. Light notes</string>
    <string name="developer_email" translatable="false">v.kudashov.83@yandex.ru</string>
    <string name="email_to_developer_text">Message: \n\n\n-----------------\nApplication info:\n%s</string>
    <string name="note_edittext_description">Edit note</string>
    <string name="admob_description">Advertising banner</string>
    <string name="add_note_button_description">Add note</string>
    <string name="cell_note_description">Note</string>
    <string name="notes_listview_description">Notes</string>
    <string name="folder_listview_description">Notes folders</string>
    <string name="actionbar_home_folder_list_description">Folder list show</string>
    <string name="actionbar_home_back_description">Back</string>
    <string name="add_time_text">Write time</string>
    <string name="folder_not_found">Folder not found</string>
    <string name="note_not_found">Note not found</string>
    <string name="option_checked_char">☑</string>
    <string name="option_unchecked_char">☐</string>
    <string name="action_send_text">Share</string>
    <string name="fetch_count">Сount: %s</string>
    <string name="record_s">Record: %s</string>
    <string name="statuses_select">Select the record statuses</string>
    <string name="month_count_for_delete_notes_title">Select entries older than months:</string>
    <string name="show_and_select_records">Show records</string>
    <string name="status_select_need">You need to select at least one status</string>
    <string name="day_count_need">Fix the number of months</string>
    <string name="delete_cancel">Cancel deletion</string>
    <string name="delete_unused_confirm">Delete selected ones</string>
    <string name="delete_unused_confirm_message">Attention! The operation is irreversible! The selected entries will be deleted.</string>
    <string name="check_the_box_for_entries_to_delete">Check the box for entries to delete</string>
    <string name="delete_mode_undo_need_message">To view the recordings, cancel the deletion</string>
    <string name="in_all_folders">In all folders</string>
    <string name="in_folder_s">In the folder: %s</string>
    <string name="there_are_no_records">There are no records</string>
    <string name="search_canceled_check_again">The search is disabled. Please check the records and repeat the operation</string>
    <string name="license_lang">en</string>
    <string name="accept_btn">I agree</string>
    <string name="next_part_scroll_cd">To the next position</string>
    <string name="prev_part_scroll_cd">To the previous position</string>

    <string name="action_tips">Tips (to help the project)</string>
    <string name="help_the_project_title">Help the project</string>
    <string name="help_the_project_title_desc">Leave the developer a tip; it will help make the app better. You can open the link to send a tip in your browser or scan the QR code:</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="i_helped">I helped</string>
    <string name="i_do_not_want">I do not want</string>
    <string name="remind_later">Later</string>
    <string name="qr_code_cd">QR code</string>

</resources>
